# cepwa3-bevy

./: Cargo.toml  README.md  cepwa3-bevy-24d4d7be7fc854a5.js  index.html
.github/workflows/: deploy-page.yml  release.yaml
src/: config.rs  constants.rs  lib.rs  main.rs
src/components/: markers.rs  mod.rs  object_bundle.rs  objectives.rs  past_locations.rs  physics_object.rs  propulsion.rs  trajectory_prediction.rs
src/systems/: camera.rs  mod.rs  objectives.rs  prediction.rs  trail.rs  ui.rs  user_control.rs  world_setup.rs
src/systems/physics/: apply_force.rs  collision.rs  collision_system.rs  gravity.rs  mod.rs  propulsion.rs
