[package]
name = "cepwa3-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_log",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "multi_threaded",
    "webgl2",
    "x11",
] }
trunk = "0.21.14"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
